# first-fast-api-pipeline

./: .env  Dockerfile  Jenkinsfile  Jenkinsfile.test  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  wait_for_db.py
app/: database.py  main.py
app/crud/: user.py
app/models/: user.py
app/schemas/: user.py
